fixed the center alignment of buttons

--- a/src/styles/confirm.css
+++ b/src/styles/confirm.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px auto;
+    align-items: center;
 }
 
 .confirm-descr {
